# duckscript

./: .SRCINFO  .gitignore  .rusty-hook.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  PKGBUILD  README.md  appveyor.yml  sdkdocs.ds  test.ds
docs/: _config.yml  (+2 more)
duckscript/: Cargo.toml
duckscript/src/: command.rs  context.rs  error.rs  expansion.rs  expansion_test.rs  instruction.rs  io.rs  lib.rs  lib_test.rs  parser.rs  parser_test.rs  runner.rs  runner_test.rs  test.rs  types.rs
duckscript/src/preprocessor/: include_files_preprocessor.rs  include_files_preprocessor_test.rs  mod.rs  mod_test.rs  print_preprocessor.rs
duckscript/src/test/: mod.rs
duckscript/src/test/scripts/: crash.ds  echo.ds  include_file.ds  multiple_commands.ds  print_preprocessor.ds  set.ds  simple.ds  simple_runnable.ds
duckscript/src/types/: command.rs  command_test.rs  env.rs  env_test.rs  error.rs  error_test.rs  instruction.rs  instruction_test.rs  mod.rs  runtime.rs  runtime_test.rs
duckscript_cli/: Cargo.toml  Makefile.toml  README.md
duckscript_cli/src/: error.rs  error_test.rs  help.txt  linter.rs  main.rs
duckscript_sdk/: Cargo.toml  Makefile.toml
duckscript_sdk/src/: lib.rs  lib_test.rs
duckscript_sdk/src/internal/: mod.rs
duckscript_sdk/src/internal/sdkdocs/: mod.rs
duckscript_sdk/src/sdk/: mod.rs
duckscript_sdk/src/sdk/internal/: mod.rs
duckscript_sdk/src/sdk/internal/sdkdocs/: footer.md  help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/internal/test/: mod.rs
duckscript_sdk/src/sdk/internal/test/test_directory/: mod.rs
duckscript_sdk/src/sdk/internal/test/test_file/: mod.rs
duckscript_sdk/src/sdk/std/: mod.rs
duckscript_sdk/src/sdk/std/alias/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/alias/set/: mod.rs
duckscript_sdk/src/sdk/std/alias/unset/: mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/array/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/: help.md  mod.rs
duckscript_sdk/src/sdk/std/collections/array/: help.md  mod.rs
duckscript_sdk/src/sdk/std/collections/array_clear/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/array_concat/: help.md  mod.rs  script.ds
duckscript_sdk/src/sdk/std/collections/array_contains/: help.md  mod.rs  mod_test.rs  script.ds
duckscript_sdk/src/sdk/std/collections/array_contains_value/: help.md  mod.rs  script.ds
duckscript_sdk/src/sdk/std/collections/array_get/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/array_is_empty/: help.md  mod.rs  mod_test.rs  script.ds
duckscript_sdk/src/sdk/std/collections/array_join/: help.md  mod.rs  script.ds
duckscript_sdk/src/sdk/std/collections/array_length/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/array_pop/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/array_push/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/array_remove/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/array_set/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/is_array/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/is_map/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/is_set/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/map/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/map_clear/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/collections/map_contains_key/: help.md  mod.rs  script.ds
duckscript_sdk/src/sdk/std/debug/: mod.rs
duckscript_sdk/src/sdk/std/echo/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/env/: mod.rs
duckscript_sdk/src/sdk/std/eval/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/flowcontrol/: mod.rs
duckscript_sdk/src/sdk/std/forin/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/fs/: mod.rs
duckscript_sdk/src/sdk/std/function/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/goto/: mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/hash/: mod.rs
duckscript_sdk/src/sdk/std/ifelse/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/is_command_defined/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/is_defined/: mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/json/: help.md  mod.rs
duckscript_sdk/src/sdk/std/lib/: mod.rs
duckscript_sdk/src/sdk/std/man/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/math/: mod.rs
duckscript_sdk/src/sdk/std/net/: mod.rs
duckscript_sdk/src/sdk/std/noop/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/not/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/on_error/: mod.rs
duckscript_sdk/src/sdk/std/os_family/: help.md  mod.rs
duckscript_sdk/src/sdk/std/print/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/println/: help.md  mod.rs  mod_test.rs  script.ds
duckscript_sdk/src/sdk/std/process/: mod.rs
duckscript_sdk/src/sdk/std/random/: mod.rs
duckscript_sdk/src/sdk/std/read/: help.md  mod.rs
duckscript_sdk/src/sdk/std/release/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/scope/: mod.rs
duckscript_sdk/src/sdk/std/semver/: mod.rs
duckscript_sdk/src/sdk/std/set/: help.md  mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/string/: mod.rs
duckscript_sdk/src/sdk/std/test/: mod.rs
duckscript_sdk/src/sdk/std/thread/: mod.rs
duckscript_sdk/src/sdk/std/time/: mod.rs
duckscript_sdk/src/sdk/std/unalias/: mod.rs  mod_test.rs
duckscript_sdk/src/sdk/std/var/: mod.rs
duckscript_sdk/src/sdk/std/zip/: mod.rs
duckscript_sdk/src/std/: mod.rs
duckscript_sdk/src/std/echo/: mod.rs
duckscript_sdk/src/std/set/: mod.rs
duckscript_sdk/src/test/: mod.rs
duckscript_sdk/src/types/: command.rs  mod.rs  scope.rs
duckscript_sdk/src/utils/: annotation.rs  condition.rs  condition_test.rs  eval.rs  eval_test.rs  exec.rs  exec_test.rs  flags.rs  flags_test.rs  instruction_query.rs  instruction_query_test.rs  io.rs  io_test.rs  mod.rs  pckg.rs  pckg_test.rs  scope.rs  state.rs  state_test.rs
(+1026 files in other folders)
