[package]
name = "duckscript"
version = "0.7.1"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "Simple, extendable and embeddable scripting language."
license = "Apache-2.0"
edition = "2018"
documentation = "https://sagiegurari.github.io/duckscript/api/duckscript/index.html"
homepage = "http://github.com/sagiegurari/duckscript"
repository = "https://github.com/sagiegurari/duckscript.git"
readme = "README.md"
keywords = ["script", "script-engine", "language"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "/benches/*",
  "/docs/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
]

[dependencies]
fsio = "^0.3"

[badges.codecov]
branch = "master"
repository = "sagiegurari/duckscript"
service = "github"
