[package]
name = "duckscript_cli"
version = "0.8.6"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "The duckscript command line executable."
license = "Apache-2.0"
edition = "2018"
documentation = "https://sagiegurari.github.io/duckscript/api/duckscript/index.html"
homepage = "http://github.com/sagiegurari/duckscript"
repository = "https://github.com/sagiegurari/duckscript.git"
readme = "README.md"
keywords = ["script", "script-engine", "language"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "/benches/*",
  "/docs/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
]

[[bin]]
name = "duck"
path = "src/main.rs"

[dependencies]
duckscript = { version = "^0.7.1", path = "../duckscript" }
duckscriptsdk = { version = "^0.8.6", path = "../duckscript_sdk" }

[badges.codecov]
branch = "master"
repository = "sagiegurari/duckscript"
service = "github"
