[package]
name = "duckscriptsdk"
version = "0.8.11"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "The duckscript SDK."
license = "Apache-2.0"
edition = "2021"
documentation = "https://sagiegurari.github.io/duckscript/api/duckscript/index.html"
homepage = "http://github.com/sagiegurari/duckscript"
repository = "https://github.com/sagiegurari/duckscript.git"
readme = "README.md"
keywords = ["script", "script-engine", "language"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "/benches/*",
  "/docs/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
]

[dependencies]
attohttpc = { version = "^0.19", default-features = false, features = [
  "compress",
] }
base64 = "^0.13"
cfg-if = "^1"
colored = "^2"
duckscript = { version = "^0.7.2", path = "../duckscript" }
fs_extra = "^1"
fsio = { version = "^0.3.1", features = ["temp-path"] }
ftp = "^3"
glob = "^0.3"
heck = "^0.4"
home = "^0.5"
ignore = "^0.4"
java-properties = "^1"
meval = "^0.2"
num_cpus = "^1"
rand = "^0.8"
semver = "^1"
serde_json = "^1"
sha2 = "^0.10"
walkdir = "^2"
which = { version = "^4", default-features = false }
whoami = "^1"

[target.'cfg(not(windows))'.dependencies]
uname = "^0.1"

[features]
tls = ["attohttpc/tls"]
default = ["tls"]

[badges.codecov]
branch = "master"
repository = "sagiegurari/duckscript"
service = "github"
