[package]
name = "duckscriptsdk"
version = "0.11.1"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "The duckscript SDK."
license = "Apache-2.0"
edition = "2021"
documentation = "https://sagiegurari.github.io/duckscript/api/duckscript/index.html"
homepage = "http://github.com/sagiegurari/duckscript"
repository = "https://github.com/sagiegurari/duckscript.git"
readme = "README.md"
keywords = ["script", "script-engine", "language"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "/benches/*",
  "/docs/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
]

[dependencies]
attohttpc = { version = "^0.29", default-features = false, features = [
  "compress",
] }
base64 = "^0.22"
cfg-if = "^1"
colored = "^3"
duckscript = { version = "^0.10.0", path = "../duckscript" }
evalexpr = "^12"
fs_extra = "^1"
fsio = { version = "^0.4", features = ["temp-path"] }
glob = "^0.3"
heck = "^0.5"
home = "^0.5"
ignore = "^0.4"
java-properties = "^2"
num_cpus = "^1"
rand = "^0.9"
semver = "^1"
serde_json = "^1"
sha2 = "^0.10"
suppaftp = "^6.0"
walkdir = "^2"
which = { version = "^7", default-features = false }
whoami = "^1"
zip = { version = "^4", default-features = false, features = [
  "bzip2",
  "deflate",
  "time",
] }

[target.'cfg(not(windows))'.dependencies]
uname = "^0.1"

[features]
tls-rustls = ["attohttpc/rustls"]
tls-native = ["attohttpc/tls"]
tls = ["tls-rustls"]              # alias for backward compatibility
default = ["tls-rustls"]
